src/fauxton/assets/less/fauxton.less
/*  Licensed under the Apache License, Version 2.0 (the "License"); you may not
 *  use this file except in compliance with the License. You may obtain a copy of
 *  the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 *  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 *  License for the specific language governing permissions and limitations under
 *  the License.
 */

/*!
 *
 * Fauxton less style files
 *
 */
@import "bootstrap/bootstrap.less";
@import "bootstrap/mixins.less";
@import "variables.less";
@import "config.less";
@import "logs.less";
@import "prettyprint.less";
@import "database.less";
@import "icons.less";


body {
  background-color: #F2F2F2;
}

footer {
  position: fixed;
  bottom: 0;
  font-size: 10px;
  margin-left: @navWidth;
  padding: 5px 10px;
  background-color: #F2F2F2;
  width: 100%;
}

.hide-text {
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
}

.row {
  margin-left: 0;
}

// globals
body {
  font-size: 16px;
  line-height:1.3;
  padding-bottom: 0px;
  color: #333;
  padding-top: 92px;
  &#home{
    padding-top: 90px;
  }
  background-color: @sidebarBG;
  /* OVERRIDE BOOTSTRAP BTN STYLES */
  .btn{
    .box-shadow(none);
    .border-radius(0);
    background-image: none;
    text-shadow: none;
    background-repeat: no-repeat;
  }
}

h2,h3,h4 {font-weight: 600;}


a, .btn{
  .transition(all .25s linear);
}

a,
a:visited,
a:active {
  color: @linkColor;
}

a:hover{
  color: @red;
}

/* ajax loader */
.loader {
  background: url('../img/loader.gif') center center no-repeat;
  min-height:  100px;
}
#app-container.loader{
  min-height: 400px;
  > *{
    display: none;
  }
}

#global-notifications {
  position: fixed;
  top: 0px;
  display: block;
  z-index: 100000;
  left: @navWidth;
  .closeMenu & {
    left: @collapsedNavWidth;
  }
  width: 100%;
}

#app-container{
  padding: 0;
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  > .row-fluid {
    height: 100%;
  }
}

/* bootstrap override */
.container-fluid {
  padding-right: 0px;
  padding-left: 0px;
}
/* ... */

